--- a/todo/index.html
+++ b/todo/index.html
@@ -7,6 +7,7 @@
     <title>To Do</title>
     <script src="app.js" defer type="module"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
 </head>
 
 <body>
